--- a/.env
+++ b/.env
@@ -31,7 +31,8 @@ BASE=/public
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root:3101@127.0.0.1:3306/blog?serverVersion=5.7"
+#DATABASE_URL="mysql://root:3101@127.0.0.1:3306/blog?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/blogs?serverVersion=8&charset=utf8mb4"
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
